# AaediHAM

./: CMakeLists.txt  Makefile  README.md  aaediclock.cc  aaediclock.h  aaediclock_config.json  build.sh  classes.cc  modules.cc  modules.h  utils.cc  utils.h
modules/: callsign.cc  callsign.h  clock.cc  clock.h  de_dx.cc  de_dx.h  dx_spots.cc  dx_spots.h  kindex.cc  kindex.h  map.cc  map.h  ncdxf.cc  ncdxf.h  overlay.cc  pota.cc  pota.h  sat_tracker.cc  sat_tracker.h  sun.cc  sun.h
